// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`identifier.json format 1`] = `
====================================options=====================================
parsers: ["json"]
printWidth: 80
     |                                                                                | printWidth
=====================================input======================================
> 1 | {"a":1, "b":2}
    |  ^^^
  2 | 
=====================================output=====================================
{ "a": 1, "b": 2 }

================================================================================
`;

exports[`inside-array.json format 1`] = `
====================================options=====================================
parsers: ["json"]
printWidth: 80
     |                                                                                | printWidth
=====================================input======================================
  1 | {
  2 | a: [
  3 | 1,
> 4 |  2,  3,4,5,6,      7,
    |  ^^^^^^^^^^^^^^^^^^^
  5 | 8
  6 | ],
  7 | b: [1, 2,      3, 4]
  8 | }
  9 | 
=====================================output=====================================
{
a: [1, 2, 3, 4, 5, 6, 7, 8],
b: [1, 2,      3, 4]
}

================================================================================
`;

exports[`inside-object.json format 1`] = `
====================================options=====================================
parsers: ["json"]
printWidth: 80
     |                                                                                | printWidth
=====================================input======================================
  1 | {a:
> 2 | { "b": 2, "c": 3 },
    |        ^^^^^^^^^
  3 | b: {d:4}
  4 | }
  5 | 
=====================================output=====================================
{a:
{ "b": 2, "c": 3 },
b: {d:4}
}

================================================================================
`;

exports[`issue-4009.json format 1`] = `
====================================options=====================================
parsers: ["json"]
printWidth: 80
     |                                                                                | printWidth
=====================================input======================================
> 1 | {
    |  ^
> 2 |     "foo": "bar"
    | ^^^^^^^^^^^^^^^^
> 3 | }
    | ^
  4 | 
=====================================output=====================================
{
  "foo": "bar"
}

================================================================================
`;

exports[`issue-7116.json format 1`] = `
====================================options=====================================
parsers: ["json"]
printWidth: 80
     |                                                                                | printWidth
=====================================input======================================
> 1 | { "b": 2 }
    |      ^^^^
  2 | 
=====================================output=====================================
{ "b": 2 }

================================================================================
`;

exports[`issue2297.json format 1`] = `
====================================options=====================================
parsers: ["json"]
printWidth: 80
     |                                                                                | printWidth
=====================================input======================================
> 1 | {"a":1, "b":2}
    |      ^
  2 | 
=====================================output=====================================
{ "a": 1, "b": 2 }

================================================================================
`;

exports[`number.json format 1`] = `
====================================options=====================================
parsers: ["json"]
printWidth: 80
     |                                                                                | printWidth
=====================================input======================================
> 1 | { "b": 2, "c": 3 }
    |        ^^^^^^^^^
  2 | 
=====================================output=====================================
{ "b": 2, "c": 3 }

================================================================================
`;
